# mymodels

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  environment.yaml  grep  pyproject.toml
.claude/skills/_template/: SKILL.md
.claude/skills/concise/: SKILL.md
.claude/skills/ml-coding/: SKILL.md
.claude/skills/python-coding/: SKILL.md
.cursor/rules/: project.mdc
.cursor/skills/_template/: SKILL.md
.cursor/skills/python-coding/: SKILL.md
docs/: README-wikipedia.md  wikipedia.md
wikipedia/: __init__.py  architecture.py  data.py  inference.py  reporting.py  tokenizer.py  training.py  utils.py
wikipedia/configs/: wikipedia_medium.yaml  wikipedia_small.yaml
wikipedia/docs/: README-wikipedia.md
wikipedia/tests/: __init__.py  conftest.py  test_architecture.py  test_data.py  test_inference.py  test_reporting.py  test_tokenizer.py  test_training.py
