[project]
name = "mymodels"
version = "0.1.0"
description = "Personal PyTorch models."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "Apache-2.0"
dependencies = [
    "numpy>=2.2.6",
    "pyest>=0.7.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.15.22",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["wikipedia/tests"]
